# pkg/nifi/models/controller_service_definition.go
@@ -20,6 +20,9 @@ import (
 // swagger:model ControllerServiceDefinition
 type ControllerServiceDefinition struct {
 
+	// Indicates if the component has additional details documentation
+	AdditionalDetails bool `json:"additionalDetails,omitempty"`
+
 	// The artifact name of the bundle that provides the referenced type.
 	Artifact string `json:"artifact,omitempty"`
 
@@ -29,8 +32,15 @@ type ControllerServiceDefinition struct {
 	// Whether or not the component has been deprecated
 	Deprecated bool `json:"deprecated,omitempty"`
 
+	// If this component has been deprecated, this optional field provides alternatives to use
+	// Unique: true
+	DeprecationAlternatives []string `json:"deprecationAlternatives"`
+
 	// If this component has been deprecated, this optional field can be used to provide an explanation
 	DeprecationReason string `json:"deprecationReason,omitempty"`
+
+	// Describes the dynamic properties supported by this component
+	DynamicProperties []*DynamicProperty `json:"dynamicProperties"`
 
 	// Explicit restrictions that indicate a require permission to use the component
 	// Unique: true
@@ -51,11 +61,21 @@ type ControllerServiceDefinition struct {
 	// An optional description of the general restriction
 	RestrictedExplanation string `json:"restrictedExplanation,omitempty"`
 
-	// stateful
+	// The names of other component types that may be related
+	// Unique: true
+	SeeAlso []string `json:"seeAlso"`
+
+	// Indicates if the component stores state
 	Stateful *Stateful `json:"stateful,omitempty"`
 
 	// Whether or not this component makes use of dynamic (user-set) properties.
 	SupportsDynamicProperties bool `json:"supportsDynamicProperties,omitempty"`
+
+	// Whether or not this component makes use of sensitive dynamic (user-set) properties.
+	SupportsSensitiveDynamicProperties bool `json:"supportsSensitiveDynamicProperties,omitempty"`
+
+	// The system resource considerations for the given component
+	SystemResourceConsiderations []*SystemResourceConsideration `json:"systemResourceConsiderations"`
 
 	// The tags associated with this type
 	// Unique: true
@@ -80,6 +100,14 @@ func (m *ControllerServiceDefinition) Validate(formats strfmt.Registry) error {
 		res = append(res, err)
 	}
 
+	if err := m.validateDeprecationAlternatives(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateDynamicProperties(formats); err != nil {
+		res = append(res, err)
+	}
+
 	if err := m.validateExplicitRestrictions(formats); err != nil {
 		res = append(res, err)
 	}
@@ -92,7 +120,15 @@ func (m *ControllerServiceDefinition) Validate(formats strfmt.Registry) error {
 		res = append(res, err)
 	}
 
+	if err := m.validateSeeAlso(formats); err != nil {
+		res = append(res, err)
+	}
+
 	if err := m.validateStateful(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateSystemResourceConsiderations(formats); err != nil {
 		res = append(res, err)
 	}
 
@@ -124,6 +160,44 @@ func (m *ControllerServiceDefinition) validateBuildInfo(formats strfmt.Registry)
 			}
 			return err
 		}
+	}
+
+	return nil
+}
+
+func (m *ControllerServiceDefinition) validateDeprecationAlternatives(formats strfmt.Registry) error {
+	if swag.IsZero(m.DeprecationAlternatives) { // not required
+		return nil
+	}
+
+	if err := validate.UniqueItems("deprecationAlternatives", "body", m.DeprecationAlternatives); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *ControllerServiceDefinition) validateDynamicProperties(formats strfmt.Registry) error {
+	if swag.IsZero(m.DynamicProperties) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.DynamicProperties); i++ {
+		if swag.IsZero(m.DynamicProperties[i]) { // not required
+			continue
+		}
+
+		if m.DynamicProperties[i] != nil {
+			if err := m.DynamicProperties[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("dynamicProperties" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("dynamicProperties" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
 	}
 
 	return nil
@@ -211,6 +285,18 @@ func (m *ControllerServiceDefinition) validateProvidedAPIImplementations(formats
 	return nil
 }
 
+func (m *ControllerServiceDefinition) validateSeeAlso(formats strfmt.Registry) error {
+	if swag.IsZero(m.SeeAlso) { // not required
+		return nil
+	}
+
+	if err := validate.UniqueItems("seeAlso", "body", m.SeeAlso); err != nil {
+		return err
+	}
+
+	return nil
+}
+
 func (m *ControllerServiceDefinition) validateStateful(formats strfmt.Registry) error {
 	if swag.IsZero(m.Stateful) { // not required
 		return nil
@@ -225,6 +311,32 @@ func (m *ControllerServiceDefinition) validateStateful(formats strfmt.Registry) 
 			}
 			return err
 		}
+	}
+
+	return nil
+}
+
+func (m *ControllerServiceDefinition) validateSystemResourceConsiderations(formats strfmt.Registry) error {
+	if swag.IsZero(m.SystemResourceConsiderations) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.SystemResourceConsiderations); i++ {
+		if swag.IsZero(m.SystemResourceConsiderations[i]) { // not required
+			continue
+		}
+
+		if m.SystemResourceConsiderations[i] != nil {
+			if err := m.SystemResourceConsiderations[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("systemResourceConsiderations" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("systemResourceConsiderations" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
 	}
 
 	return nil
@@ -259,6 +371,10 @@ func (m *ControllerServiceDefinition) ContextValidate(ctx context.Context, forma
 		res = append(res, err)
 	}
 
+	if err := m.contextValidateDynamicProperties(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
 	if err := m.contextValidateExplicitRestrictions(ctx, formats); err != nil {
 		res = append(res, err)
 	}
@@ -272,6 +388,10 @@ func (m *ControllerServiceDefinition) ContextValidate(ctx context.Context, forma
 	}
 
 	if err := m.contextValidateStateful(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.contextValidateSystemResourceConsiderations(ctx, formats); err != nil {
 		res = append(res, err)
 	}
 
@@ -297,6 +417,31 @@ func (m *ControllerServiceDefinition) contextValidateBuildInfo(ctx context.Conte
 			}
 			return err
 		}
+	}
+
+	return nil
+}
+
+func (m *ControllerServiceDefinition) contextValidateDynamicProperties(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.DynamicProperties); i++ {
+
+		if m.DynamicProperties[i] != nil {
+
+			if swag.IsZero(m.DynamicProperties[i]) { // not required
+				return nil
+			}
+
+			if err := m.DynamicProperties[i].ContextValidate(ctx, formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("dynamicProperties" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("dynamicProperties" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
 	}
 
 	return nil
@@ -383,6 +528,31 @@ func (m *ControllerServiceDefinition) contextValidateStateful(ctx context.Contex
 			}
 			return err
 		}
+	}
+
+	return nil
+}
+
+func (m *ControllerServiceDefinition) contextValidateSystemResourceConsiderations(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.SystemResourceConsiderations); i++ {
+
+		if m.SystemResourceConsiderations[i] != nil {
+
+			if swag.IsZero(m.SystemResourceConsiderations[i]) { // not required
+				return nil
+			}
+
+			if err := m.SystemResourceConsiderations[i].ContextValidate(ctx, formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("systemResourceConsiderations" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("systemResourceConsiderations" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
 	}
 
 	return nil
